tests/ui/static/bad-const-type.stderr
error[E0308]: mismatched types
  --> $DIR/bad-const-type.rs:1:20
   |
LL | static i: String = 10;
   |                    ^^ expected `String`, found integer
   |
help: try using a conversion method
   |
LL | static i: String = 10.to_string();
   |                      ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
